Closed Bug 1863795 Opened 11 months ago Closed 10 months ago

Fix out-of-process folder-picker preference interpretation

Categories

(Core :: Widget: Win32, defect)

Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox121 --- fixed

People

(Reporter: rkraesig, Assigned: rkraesig)

References

Details

Attachments

(1 file)

The out-of-process file- and folder-picker fallback-code preference implementation was not deduplicated (oops), and the folder-picker's implementation has the wrong semantics.

Blocks: 1858225

Deduplicate some code, unifying (and thereby correcting) the preference
semantics in the process.

Pushed by rkraesig@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8f2fcb6a2980 Windows nsFilePicker: unify File and Folder fallback-decision code r=win-reviewers,handyman
Status: NEW → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: