Bug 1863795 - Windows nsFilePicker: unify File and Folder fallback-decision code  r=win-reviewers,handyman

The `#ifdef NIGHTLY_BUILD` logic was incorrectly only added to the
file-picker fallback code and not the folder-picker fallback code.

Deduplicate these (as should have been done earlier), and correct the
latter's semantics in the process.

Differential Revision: https://phabricator.services.mozilla.com/D193101